# json-backed-dict

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
json_backed_dict/: __init__.py  core.py
tests/: test_core.py
