[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'json-backed-dict'
dynamic = ['version']
requires-python = '>=3.9'
dependencies = ['orjson>=3.9']

[project.optional-dependencies]
dev = ['pytest>=7.0', 'ruff', 'ty', 'hatch']

[tool.hatch.version]
path = 'json_backed_dict/__init__.py'

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['E', 'F', 'I']

[tool.pytest.ini_options]
testpaths = ['tests']
